<resources>
    <string name="app_name">EventFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="login">GİRİŞ</string>
    <string name="enter_password">Şifrenizi giriniz!</string>
    <string name="enter_email">E-postanızı giriniz!</string>
    <string name="name_enter">Adınızı giriniz</string>
    <string name="now_sign_up">Şimdi üye ol</string>
    <string name="are_you_not_sign_up">Üye değil misin?</string>
    <string name="sign_up_upper">KAYIT OL</string>
    <string name="already_signup">Zaten üye misin?</string>
    <string name="login_lower">Giriş Yap</string>
    <string name="change_name_info">Buradan kullanıcı adınızı değiştirebilirsiniz. Yeni kullanıcı adınızı girin ve güncellemeden önce onay kutusunu işaretleyin.</string>
    <string name="checkbox_error">*Devam etmek için onay kutusunu işaretlemeniz gerekiyor.</string>
    <string name="checkbox_text">Evet, adımı değiştirmek istiyorum.</string>
    <string name="update_profile_button">Onayla ve Gücelle</string>
    <string name="profile_title1">Profilinizi değiştirin</string>
    <string name="profile_title">Üyelik Bilgileri</string>
    <string name="account_title">Profil ve Hesap Ayarları</string>
    <string name="account_customer_name">Müşteri Adı</string>
    <string name="account_complete_text">Bilgilerini doldurarak daha iyi bir deneyim yaşayabilirsin.</string>
    <string name="account_change_password_title">Güvenlik</string>
    <string name="account_notification_title">Uygulama Ayarları</string>
    <string name="notifications">Bildirimler</string>
    <string name="change_password">Şifre Değiştir</string>
    <string name="account_logout">Çıkış Yap</string>
    <string name="back_button">back button</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="example_email_com">example@email.com</string>
    <string name="profile_complete">Profilini Tamamla</string>
    <string name="new_event_title">YENİ ETKİNLİK</string>
    <string name="update_event">ETKİNLİĞİ GÜNCELLE</string>
    <string name="event_info_title">Etkinlik Bilgileri</string>
    <string name="event_name_title">Etkinlik Adı</string>
    <string name="event_description_title">Açıklama Ekle</string>
    <string name="event_description">Açıklama</string>
    <string name="event_empty_state_text">Henüz hizmet bulunmamaktadır.</string>
    <string name="service_info_title">Hizmet Bilgileri</string>
    <string name="celebration">Kutlama</string>
    <string name="workshop">Atölye</string>
    <string name="date">Tarih</string>
    <string name="start">Başlangıç</string>
    <string name="end">Bitiş</string>
    <string name="event_location_text">Etkinlik konumunu giriniz</string>
    <string name="customer_info_title">Müşteri Bilgileri</string>
    <string name="customer_name">Müşteri Adı</string>
    <string name="example_phone_number">+90 111 111 11 11</string>
    <string name="customer_empty_state_text">Henüz müşteriniz bulunmamaktadır.</string>
    <string name="customer_selected_text">Önceki müşterilerden seç ya da yeni müşteri ekle</string>
    <string name="add_new_customer">Yeni Müşteri Ekle</string>
    <string name="customer_info_add">Müşteri bilgilerini ekle</string>
    <string name="event_update">ETKİNLİĞİ GÜNCELLE</string>
    <string name="event_save">ETKİNLİĞİ KAYDET</string>
    <string name="delete_button">delete button</string>
    <string name="edit_button">edit button</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Etkinlik Tarihi:</string>
    <string name="start_time">Başlangıç Saati:</string>
    <string name="end_time">Bitiş Saati:</string>
    <string name="event_location">Etkinlik Konumu:</string>
    <string name="service_info">Hizmet Bilgisi</string>
    <string name="customer_name_surname">Müşteri Adı Soyadı:</string>
    <string name="email">E posta:</string>
    <string name="phone">Telefon:</string>
    <string name="event_empty_state">Bu tarihte etkinlik bulunmamaktadır.</string>
    <string name="name">Ad</string>
    <string name="reservations">Rezervasyonlar</string>
    <string name="last_reservations">Geçmiş Rezervasyonlar</string>
    <string name="reservation_empty_state">Henüz rezervasyon bulunmamaktadır.</string>
    <string name="service_empty_state">Henüz hizmet eklenmemiştir.</string>
    <string name="new_service">YENİ HİZMET</string>
    <string name="update_service">HİZMETİ GÜNCELLE</string>
    <string name="service_name">Hizmet Adı</string>
    <string name="service_description">Hizmet Açıklaması</string>
    <string name="add_photo">Fotoğraf Ekle</string>
    <string name="service_price">Hizmet Ücreti</string>
    <string name="service_save">HİZMETİ KAYDET</string>
    <string name="service_update">HİZMETİ GÜNCELLE</string>
    <string name="sign_up_screen">KAYIT OL EKRANI</string>
    <string name="email_enter">E- posta adresinizi giriniz</string>
    <string name="password_enter">Şifre oluştur</string>
    <string name="confirm_password">Şifre onayla</string>
    <string name="are_you_sure">EMİN MİSİNİZ?</string>
    <string name="delete_bottom_sheet_text">Şuan belirli bir işlemi silmek üzeresiniz.</string>
    <string name="cancel">İPTAL</string>
    <string name="yes">EVET</string>
    <string name="customer_list_title">Müşteri Bilgileri</string>
    <string name="customer_edit_name">Ad Soyad</string>
    <string name="customer_edit_email">E-Posta</string>
    <string name="customer_edit_phone">Telefon</string>
    <string name="ptal">İptal</string>
    <string name="customer_edit_save">KAYDET</string>
    <string name="reminder">Hatırlatıcı</string>
</resources>