<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dusty_white"
    android:paddingHorizontal="24dp"
    tools:context=".ui.service.ServiceDetailFragment">

    <!-- Home Title -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/new_service"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pageUpdateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/update_service"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="pageTitle, pageUpdateTitle" />

    <!-- Service Title -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serviceTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:hint="@string/service_name"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serviceTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Service Description Hizmetin kapsadığı şeyler anlatılmalı -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serviceDescription"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="12dp"
        android:hint="@string/service_description"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serviceDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/imageAddTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/add_photo"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_add_circle"
        app:drawableTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servicePrice"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:hint="@string/service_price"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAddTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/servicePriceEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|top"
            android:inputType="number"
            android:text=""
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Service Save Button -->
    <Button
        android:id="@+id/serviceSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/service_save"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <!-- Save Service Update Button -->
    <Button
        android:id="@+id/serviceUpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/service_update"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>